# aoe4-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  backup.sql  bot_prod.db  check.sh  docker-compose.yml  fly.toml  rustfmt.toml  schema.sql
.github/workflows/: fly-deploy.yml
src/: aoe4world.rs  db.rs  integration_tests.rs  main.rs  ranked.rs
